# googlrot

./: .gitignore  README.md  pyproject.toml
src/googlrot/: main.py  url_type.py
src/googlrot/mode/: code.py  repo.py
src/googlrot/util/: critical_filename.py  utils.py
tests/: stdurl_test.py
